--- a/src/views/partials/cube.hbs
+++ b/src/views/partials/cube.hbs
@@ -1,6 +1,6 @@
 <div class="cube">
-  <img class="cube" src={{this.image}} />
-  <p class="name">{{this.name}}</p>
-  <p><span>Difficulty level:</span>{{this.difficultyLvl}}</p>
-  <a class="btn" href={{this.id}}>Details</a>
+  <img class="cube" src={{image}} />
+  <p class="name">{{name}}</p>
+  <p><span>Difficulty level:</span>{{difficultyLvl}}</p>
+  <a class="btn" href="/cubes/details/{{id}}">Details</a>
 </div>
